secure/secure-network-security-policies/knps/chll5.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: solve-challenge
  namespace: eva
spec:
  ingress: []
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              app: example-voting-app
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: eva
              app.kubernetes.io/name: example-voting-app-result
      ports:
        - port: 80
          protocol: TCP
    - to:
        - namespaceSelector: {}
      ports:
        - port: 53
          protocol: UDP
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: eva
      app.kubernetes.io/name: example-voting-app-observer
  policyTypes:
    - Ingress
    - Egress
