secure/secure-network-security-policies/knps/denyall.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-all
  namespace: eva
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
    - Ingress
    - Egress
