secure/secure-network-security-policies/knps/eva-result-knp.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: result-allow
  namespace: eva
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              app: example-voting-app
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: eva
              app.kubernetes.io/name: example-voting-app-observer
      ports:
        - port: 80
          protocol: TCP
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              app: example-voting-app
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: eva
              app.kubernetes.io/name: example-voting-app-db
      ports:
        - port: 5432
          protocol: TCP
    - to:
        - namespaceSelector: {}
      ports:
        - port: 53
          protocol: UDP
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: eva
      app.kubernetes.io/name: example-voting-app-result
  policyTypes:
    - Ingress
    - Egress
