secure/secure-network-security-policies/knps/eva-vote-deny-knp.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vote-knp
  namespace: eva
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: eva
      app.kubernetes.io/name: example-voting-app-vote
  policyTypes:
    - Ingress
    - Egress
