secure/secure-network-security-policies/knps/eva-vote-knp.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vote-knp
  namespace: eva
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              app: example-voting-app
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: eva
              app.kubernetes.io/name: example-voting-app-voter
      ports:
        - port: 80
          protocol: TCP
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              app: example-voting-app
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: eva
              app.kubernetes.io/name: example-voting-app-redis
      ports:
        - port: 6379
          protocol: TCP
    - to:
        - namespaceSelector: {}
      ports:
        - port: 53
          protocol: UDP
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: eva
      app.kubernetes.io/name: example-voting-app-vote
  policyTypes:
    - Ingress
    - Egress
