secure/secure-network-security-policies/knps/eva-voter-deny-knp.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: voter-knp
  namespace: eva
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: eva
      app.kubernetes.io/name: example-voting-app-voter
  policyTypes:
    - Ingress
    - Egress
